--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
             </p>
           </div>
 
+          <div class="auth-invisible hidden">
+            <h4 class="col my-5 text-center">
+              Please login to continue.
+            </h4>
+          </div>
           <div id="auth-content" class="next-steps auth-visible hidden">
             <h2 id="content-title" class="col my-5 text-center">
               Congratulations, you've logged in!
@@ -187,13 +192,13 @@
           </div>
         </div>
 
-        <div id="no-config">
+        <div id="no-config" class="hidden">
           <h3 id="content-title" class="col my-5 text-center">
             <em>Please configure your app to continue.</em>
             </h2>
         </div>
 
-        <div class="page hidden" id="content-profile auth-visible hidden">
+        <div id="content-profile" class="page auth-visible hidden">
           <div class="container">
             <div class="row align-items-center profile-header">
               <div class="col-md-2">
