--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <button id="qsLoginBtn" class="
                       btn btn-primary btn-block btn-margin
                       auth-invisible
-                      hidden
+                      auth-hidden
                     ">
                     Log in
                   </button>
@@ -53,7 +53,7 @@
                 <!-- / Login button -->
 
                 <!-- Fullsize dropdown: show if authenticated -->
-                <li class="nav-item dropdown auth-visible hidden">
+                <li class="nav-item dropdown auth-visible auth-hidden">
                   <!-- Profile image should be set to the profile picture from the id token -->
                   <div class="nav-link dropdown-toggle" style="cursor: pointer" data-bs-toggle="dropdown"
                     id="profileDropdown">
@@ -103,12 +103,12 @@
             </p>
           </div>
 
-          <div class="auth-invisible hidden">
+          <div class="auth-invisible config-visible auth-hidden config-hidden">
             <h4 class="col my-5 text-center">
               Please login to continue.
             </h4>
           </div>
-          <div id="auth-content" class="next-steps auth-visible hidden">
+          <div id="auth-content" class="next-steps auth-visible auth-hidden">
             <h2 id="content-title" class="col my-5 text-center">
               Congratulations, you've logged in!
             </h2>
@@ -182,6 +182,11 @@
                       <pre>
                         <code class="js rounded" id="api-call-result"></code>
                       </pre>
+                      <div class="d-flex justify-content-center">
+                        <a id="back-to-top-btn" class="btn btn-secondary" href='#challenge2Section'>
+                          <span>Back to Top</span>
+                        </a>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -192,13 +197,13 @@
           </div>
         </div>
 
-        <div id="no-config" class="hidden">
+        <div id="no-config" class="config-invisible">
           <h3 id="content-title" class="col my-5 text-center">
             <em>Please configure your app to continue.</em>
             </h2>
         </div>
 
-        <div id="content-profile" class="page auth-visible hidden">
+        <div id="content-profile" class="page auth-visible auth-hidden hidden">
           <div class="container">
             <div class="row align-items-center profile-header">
               <div class="col-md-2">
