Fix funauth logo

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div id="content-home" class="page">
           <div class="text-center hero">
             <img class="mb-3 app-logo"
-              src="https://cdn.glitch.global/daf663d9-c107-4fc9-87cb-b7395a5c1ccb/funauth-logo.png?v=1661435630972"
+              src="/funauth-logo.png"
               alt="funAuth/AuthRocks logo" width="75" />
             <h1 class="mb-4">Welcome to AuthRocks!</h1>
 
